# neocities-deploy

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  renovate.json
.github/prompts/: bump-version.prompt.md  publish-release.prompt.md
.github/workflows/: aur.yml  build-and-test.yml  build-assets.yml  ci.yml  publish.yml  release.yml
aur/neocities-deploy/: .SRCINFO  PKGBUILD
aur/neocities-deploy-bin/: .SRCINFO  PKGBUILD
aur/neocities-deploy-git/: .SRCINFO  PKGBUILD
client/: Cargo.toml  README.md
client/.github/workflows/: ci.yml  publish.yml
client/src/: auth.rs  client.rs  error.rs  lib.rs  response.rs
crates/neocities-client/: Cargo.toml  README.md
crates/neocities-client/src/: auth.rs  client.rs  error.rs
crates/neocities-deploy/: Cargo.toml
crates/neocities-deploy/src/: trees.rs
crates/neocities-deploy/src/commands/: list.rs
deploy/: Cargo.toml  README.md
deploy/.github/workflows/: aur.yml  build-and-test.yml  build-assets.yml  ci.yml  release.yml
deploy/crates/neocities-client/: Cargo.toml  README.md
deploy/crates/neocities-client/src/: lib.rs  response.rs
deploy/crates/neocities-deploy/src/commands/: key.rs
deploy/src/: main.rs  params.rs  trees.rs
deploy/src/commands/: config.rs  deploy.rs  key.rs  list.rs  mod.rs
deploy/tests/: common.rs  deploy.rs  key.rs  list.rs
neocities-client/: Cargo.toml
neocities-client/src/: auth.rs  client.rs  response.rs
neocities-deploy/: Cargo.toml
neocities-deploy/src/: main.rs  params.rs  trees.rs
neocities-deploy/src/commands/: config.rs
neocities-deploy/tests/: key.rs  list.rs
nix/: apps.nix  aur.nix  develop.nix  packages.nix
src/: auth.rs  client.rs  lib.rs  params.rs
src/commands/: config.rs  mod.rs
tests/: common.rs
