[package]
name = "neocities-deploy"
description = "A command-line tool for deploying your Neocities site"
version = "0.1.13"
license = "GPL-3.0"
authors = ["André Kugland <kugland@gmail.com>"]
homepage = "https://github.com/kugland/neocities-deploy"
repository = "https://github.com/kugland/neocities-deploy"
edition = "2021"
resolver = "2"
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0.82"
bytesize = "1.3.0"
clap = { version = "4.4.18", features = ["derive"] }
directories = "5.0.1"
ignore = "0.4.22"
indexmap = { version = "2.2.6", features = ["serde"] }
inquire = "0.7.4"
itertools = "0.13.0"
log = "0.4.21"
neocities-client = "0.1.11"
parse-display = { version = "0.10.0", default-features = false }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.200", features = ["derive"] }
sha1 = "0.10.6"
toml = { version = "0.8.12", features = ["preserve_order"] }
ureq = "2.9.6"
url = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.14"
indoc = "2.0.4"
mockito = "1.4.0"
predicates = "3.1.0"
serial_test = "3.0.0"
tempfile = "3.10.1"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
opt-level = "z"
