[package]
name = "neocities-client"
description = "Another client for the Neocities API"
version = "0.1.7"
license = "GPL-3.0"
authors = ["André Kugland <kugland@gmail.com>"]
homepage = "https://github.com/kugland/neocities-client"
repository = "https://github.com/kugland/neocities-client"
edition = "2021"
resolver = "2"

[dependencies]
base64 = "0.21.7"
derive_builder = "0.20.0"
form-data-builder = "1.0.1"
indoc = "2.0.4"
log = "0.4.21"
parse-display = { version = "0.9.0", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
typed-path = "0.3.2"
ureq = "2.9.6"

[dev-dependencies]
mockito = "1.4.0"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
opt-level = "z"
