[package]
name = "neocities-client"
description = "Another client for the Neocities API"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22.0"
derive_builder = "0.20.0"
form-data-builder = "1.0.1"
indoc.workspace = true
log.workspace = true
parse-display.workspace = true
serde_json = "1.0.116"
serde.workspace = true
tap = "1.0.1"
thiserror = "2.0.0"
typed-path = "0.12.0"
ureq = "2.9.6"

[dev-dependencies]
mockito.workspace = true
