[package]
name = "neocities-deploy"
description = "A command-line tool for deploying your Neocities site"
readme = "../README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.82"
bytesize = "1.3.0"
clap = { version = "4.5.27", features = ["derive"] }
directories = "6.0.0"
ignore = "0.4.22"
indexmap = { version = "2.2.6", features = ["serde"] }
inquire = "0.7.4"
itertools = "0.14.0"
log.workspace = true
neocities-client = { path = "../client" }
parse-display.workspace = true
pretty_env_logger = "0.5.0"
serde.workspace = true
sha1 = "0.10.6"
toml = { version = "0.8.12", features = ["preserve_order"] }
url = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.14"
indoc.workspace = true
mockito.workspace = true
predicates = "3.1.0"
serial_test = "3.0.0"
tempfile = "3.10.1"
