[package]
name = "neocities-client"
description = "Another client for the Neocities API"
homepage.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22.0"
derive_builder = "0.20.0"
form-data-builder = "1.0.1"
indoc.workspace = true
log.workspace = true
parse-display.workspace = true
serde.workspace = true
serde_json = "1.0.116"
tap = "1.0.1"
thiserror = "2.0.0"
typed-path = "0.10.0"
ureq = "2.9.6"

[dev-dependencies]
mockito.workspace = true
