[package]
name = "neocities-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
derive_builder = "0.12.0"
form-data-builder = "1.0.1"
indoc = "2.0.3"
log = "0.4.19"
parse-display = { version = "0.8.1", default-features = false }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
typed-path = "0.3.2"
ureq = "2.7.1"

[dev-dependencies]
mockito = "1.1.0"
