[package]
name = "neocities-client"
description = "Another client for the Neocities API"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
base64 = "0.21.7"
derive_builder = "0.12.0"
form-data-builder = "1.0.1"
indoc = "2.0.3"
log = "0.4.19"
parse-display = { version = "0.8.1", default-features = false }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
typed-path = "0.3.2"
ureq = "2.7.1"

[dev-dependencies]
mockito = "1.1.0"
